[gd_scene load_steps=14 format=2]

[ext_resource path="res://shadow/big_shadow.png" type="Texture" id=1]
[ext_resource path="res://player/images/char.png" type="Texture" id=2]
[ext_resource path="res://player/player.gd" type="Script" id=3]
[ext_resource path="res://weapon/minigun.tscn" type="PackedScene" id=4]
[ext_resource path="res://weapon/space.tscn" type="PackedScene" id=5]
[ext_resource path="res://player/bag.gd" type="Script" id=6]
[ext_resource path="res://player/mouse.gd" type="Script" id=7]
[ext_resource path="res://icon.png" type="Texture" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 12.0

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.45
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ), Vector2( 0, -33 ), Vector2( 0, -33 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 4.0, -4.0 ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 6.0
height = 12.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 26 )

[node name="player" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource( 1 )

[node name="shadow" type="Sprite" parent="."]
position = Vector2( 0, -26 )
scale = Vector2( 2, 2 )
z_index = -1
texture = ExtResource( 1 )

[node name="body" type="Sprite" parent="."]
position = Vector2( 0, -32 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/run = SubResource( 3 )

[node name="visibility" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="visibility"]
rotation = 1.5708
shape = SubResource( 4 )

[node name="hand" type="Position2D" parent="."]
position = Vector2( 0, -25 )
rotation = 1.5708
script = ExtResource( 6 )

[node name="minigun" parent="hand" instance=ExtResource( 4 )]

[node name="space" parent="hand" instance=ExtResource( 5 )]

[node name="space2" parent="hand" instance=ExtResource( 5 )]

[node name="space3" parent="hand" instance=ExtResource( 5 )]

[node name="space4" parent="hand" instance=ExtResource( 5 )]

[node name="basePosition" type="Position2D" parent="."]
position = Vector2( -512, -300 )

[node name="mouse" type="Position2D" parent="basePosition"]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="basePosition/mouse"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 8 )

[node name="Camera2D2" type="Camera2D" parent="basePosition/mouse"]
visible = false
current = true
smoothing_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( 0, -30 )
shape = SubResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = -26.0
margin_top = -77.0
margin_right = 27.0
margin_bottom = -63.0
text = "100/100"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
